--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ li{
   margin: 0 auto;
 }
 header{
-  background-image: url(images/bg-img/bg.png);
+  background-image: url(../images/bg-img/bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
