--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ li{
   width: 1440px;
   margin: 0 auto;
 }
+/* header section start from here */
 header{
   background-image: url(../images/bg-img/bg.png);
   background-position: center;
@@ -22,15 +23,14 @@ header{
   height: 100vh;
 }
 nav{
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding-top: 20px;
 }
 .naviation{
-  display: grid;
-  grid-template-columns: auto auto;
-  justify-content: end;
+  display: flex;
+  justify-content: center;
   gap: 150px;
   align-items: center;
 }
@@ -52,10 +52,106 @@ nav{
   gap: 10px;
 }
 
+/* header section start from here */
 
+/* hero area start from here */
+.hero-area{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
 
+/* hero area left part start */
+.hero-area-left .wel{
+  font-size: 40px;
+  font-weight: 400;
+  color: #FFFFFF;
+}
+.hero-area-left h2{
+  font-size: 64px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 54px;
+}
+.hero-area-left p{
+  font-size: 16px;
+  font-weight: 400;
+  color: #31546D;
+  line-height: 24px;
+  margin: 50px 0;
+}
+.hero-area-left .btn button{
+  background-color: white;
+  width: 180px;
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #317189;
+  padding: 15px 0;
+  border-radius: 18px;
+  border: none;
+  margin-right: 46px;
+}
+.hero-area-left .btn a{
+  font-size: 16px;
+  font-weight: 400;
+  color: #317189;
+}
 
+/* hero area left part end */
 
+/* hero area right part start */
+.hero-area-right-content{
+  position: relative;
+}
+.new-lot{
+  background-color: #8A93E5;
+  height: 40px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 150px;
+  right: 520px;
+}
+.hero-area-image{
+  z-index: 999;
+}
+.hero-inner-image{
+  position: absolute;
+  top: 100px;
+  right: 165px;
+}
+.hero-image-footer{
+  position: absolute;
+  top: 490px;
+  right:160px ;
+}
+.hero-image-footer .border{
+    margin-left: 140px;
+    margin-bottom: 6px;
+}
+.hero-image-footer h5{
+  font-size: 20px;
+  font-family: 400;
+  text-transform: uppercase;
+  color: #818181;
+}
+.hero-image-footer .dollar{
+  color: #317189;
+  font-weight: 700;
+  font-size: 20px;
+}
+/* hero area right part end */
 
+/* hero area end */
 
+/* curve area start */
+/* .curve-area{
+  position: absolute;
+  top:200px;
+  right: 0px;
+} */
 
